--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">学习百分百</string>
+    <string name="title_activity_teacher_main">TeacherMainActivity</string>
+
 </resources>
