--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">学习百分百</string>
     <string name="title_activity_teacher_main">TeacherMainActivity</string>
+    <string name="title_activity_student_main">StudentMainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="navigation_course">课程</string>
+    <string name="navigation_question">试题</string>
+    <string name="navigation_message">消息</string>
+    <string name="navigation_user_info">我的</string>
 
 </resources>
