--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="navigation_course">课程</string>
     <string name="navigation_question">试题</string>
+    <string name="navigation_subscription">订阅</string>
     <string name="navigation_message">消息</string>
     <string name="navigation_user_info">我的</string>
     <string name="single_choice_info">请设置两个及以上的可选选项，并勾选一个作为正确答案：</string>
